[gd_scene load_steps=11 format=3 uid="uid://b2h5hr2lfyrqn"]

[ext_resource type="Script" uid="uid://6m61nodkoy4p" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://dmf00ma68wq72" path="res://art/UI/title_screen.png" id="2_nlkkf"]
[ext_resource type="Texture2D" uid="uid://c5rkydi171xbe" path="res://art/Buttons/btn_play_normal.png" id="3_jix8l"]
[ext_resource type="Texture2D" uid="uid://w3eaxjy6ek7i" path="res://art/Buttons/btn_credits_normal.png" id="4_glbon"]
[ext_resource type="Texture2D" uid="uid://cl18wo756numd" path="res://art/Buttons/btn_play_pressed.png" id="4_nlkkf"]
[ext_resource type="Texture2D" uid="uid://djg4c3ariwhdf" path="res://art/Buttons/btn_credits_pressed.png" id="6_qe12f"]

[sub_resource type="Animation" id="Animation_06t4h"]
resource_name = "FadeFrameIn"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade_frame:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fade_frame:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("fade_frame:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("fade_frame:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_fu7sn"]
resource_name = "FadeFrameOut"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade_frame:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fade_frame:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("fade_frame:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("fade_frame:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_7vrkn"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade_frame:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fade_frame:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("fade_frame:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("fade_frame:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jix8l"]
_data = {
&"FadeFrameIn": SubResource("Animation_06t4h"),
&"FadeFrameOut": SubResource("Animation_fu7sn"),
&"RESET": SubResource("Animation_7vrkn")
}

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_06t4h")

[node name="TitleScreen" type="Sprite2D" parent="."]
position = Vector2(240, 135)
texture = ExtResource("2_nlkkf")

[node name="fade_frame" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 0)
z_index = 1
offset_right = 480.0
offset_bottom = 270.0
color = Color(0, 0, 0, 1)

[node name="play_button" type="TextureButton" parent="."]
z_index = 2
offset_left = 172.0
offset_top = 151.0
offset_right = 300.0
offset_bottom = 187.0
texture_normal = ExtResource("3_jix8l")
texture_pressed = ExtResource("4_nlkkf")

[node name="credits_button" type="TextureButton" parent="."]
z_index = 2
offset_left = 172.0
offset_top = 201.0
offset_right = 300.0
offset_bottom = 237.0
texture_normal = ExtResource("4_glbon")
texture_pressed = ExtResource("6_qe12f")

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jix8l")
}

[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="credits_button" to="." method="_on_credits_button_pressed"]
